# aws-serverless-demo

./: .gitignore  Pipfile  README.md  _makefile_for_shared_layer  app.py  deploy-another.sh  deploy-endpoint1.sh  deploy-source-api-1.sh  deploy-source-api-2.sh  deploy.sh  packaged-template-endpoint1.yaml  packaged-template-root.yaml  pyproject.toml  requirements.txt  samconfig.toml  template-endpoint1.yaml  template-endpoint2.yaml  template-endpoint3.yaml  template-root.yaml  template.yaml  unified-schema.graphql
.github/workflows/: check.yml
another_endpoint1/: app.py
asd_cdk/: asd_cdk_stack.py
asd_cdk/graphql_schemas/: sourceApi1.graphql  sourceApi2.graphql
aws-serverless-demo-cdk/: app.py
create_activity/: app.py
endpoint1/: app.py  schema.graphql
endpoint2/: app.py  schema.graphql
endpoint3/: app.py  schema.graphql
endpoint4/: app.py
events/: create-activity-event.json  current-user-event.json
goodbye_world/: app.py
hello_world/: app.py
job1/: app.py
notification_dispatcher/: app.py
schema-merger/: index.js  package-lock.json  package.json
shared/: database.py  requirements.txt  subscriptions.py  utilities.py
sns_notification/: app.py
templates/: another-root.yaml  child1.yaml  child2.yaml  child3.yaml  notification-dispatcher.yaml  packaged-another-root.yaml  packaged-child1.yaml  packaged-child2.yaml  packaged-root.yaml  root.yaml  sourceApi1.graphql  sourceApi2.graphql  user-api.graphql  user-api.yaml  workflow-api.graphql  workflow-api.yaml
tests/: requirements.txt
tests/unit/: test_asd_cdk_stack.py  (+4 more)
user_profile/: app.py
(+10 files in other folders)
