[project]
name = "aws-serverless-demo"
version = "0.1.0"
description = "Minimal AWS SAM/AppSync architecture demo based on lessons from a work project."
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "requests",
    "uuid6",
]

[dependency-groups]
dev = [
    "cfn-lint",
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [
    "shared",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ty.environment]
extra-paths = [
    "shared",
]
